update teammates contact

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@
 
 Ronald Rivero <ralexrivero@gmail.com>
 Ayrton Coelho <ayrtoncoelhods@gmail.com>
-Fabiana Telechea <>
+Fabiana Telechea <fabianagtellechea@gmail.com>
