--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
 Ronald Rivero <ralexrivero@gmail.com>
-Ayrton Coelho <>
+Ayrton Coelho <ayrtoncoelhods@gmail.com>
 Fabiana Telechea <>
